test/files/parser/success/expression.otest
name = "Expression with one arithmetic operator"

---

test = 1 + 1

---

name = "Expression with one boolean operator"

---

test = 1 == 1

---

name = "Chained arithmetic operators"

---

test = 1 + 2 - 3 * 4 / 5 ^ 6

---

name = "Complex nested expression"

---

test = ((1 + 2) - ((3 * 4))) ^ 5 / 6 * (((7 + 8)) * 9)

---

name = "Boolean operator in between arithmetic operators"

---

test = 1 + 2 == 3 + 4

---

name = "Negative number at start of expression"

---

test = -5 + 1

---

name = "Negative number after plus sign"

---

test = 1 + -5

---

name = "Negative number after minus sign"

---

test = 1 - -5

---

name = "Negative number in parentheses"

---

test = (-1 + 5)

---

name = "Negated identifier after plus sign"

---

test = 5
test2 = 1 + -test

---

name = "Negated identifier after minus sign"

---

test = 5
test2 = 1 - -test

---

name = "Negated identifier at start of expression"

---

test = 5
test2 = -test + 1

---

name = "Negated identifier in parentheses"

---

test = 5
test2 = (-test + 1)
