test/files/parser/errors/expression.otest
name = "Incomplete expression left side"
line = 2
character = 8
error = 'Expected value after "=", but received "*".'

---

test = * 1

---

name = "Incomplete expression right side"
line = 4
character = 1
error = 'Expected value after "/".'

---

test = 1 /

---

name = "Incomplete parenthesized expression"
line = 2
character = 13
error = 'Expected value after "+", but received ")".'

---

test = (1 + )

---

name = "Missing parenthesis after expression"
line = 4
character = 1
error = 'Expected value after "+".'

---

test = (1 +

---

name = "Double operator in expression"
line = 2
character = 12
error = 'Expected value after "^", but received "^".'

---

test = 1 ^ ^

---

name = "Unfinished negation after plus"
line = 4
character = 1
error = 'Expected value after "-".'

---

test = 1 + -

---

name = "Unfinished negation after minus"
line = 3
character = 1
error = 'Expected value after "-".'

---

test = 1 - -
